saving to github

--- a/css/index.css
+++ b/css/index.css
@@ -1,160 +1,270 @@
+img {
+  vertical-align: center;
+  display: block;
+  margin: auto;
+}
 
-img{
-    vertical-align: center;
-    display: block;
-    margin:auto;
-  }
-    .container{
-        margin: auto;
-        max-width: 550px;
-    }
-    
-    #home{
-      background: url(../images/banner.jpg) no-repeat center top;
-    background-size: cover;
-    height:auto;
-    padding-bottom: 20px;
-    position: relative;
-    }
+.container {
+  margin: auto;
+  max-width: 550px;
+}
+.container1{
+  margin: auto;
+  max-width: 1100px;
+}
 
-    #home .homebutton li {
-        margin: auto;
-          color: #fff;
-          font-family: Muli,Helvetica Neue,sans-serif;
-          list-style: none;
-      margin: auto;
-        display: inline-block;
-      padding: 20px 10px 0px 40px;
-        font-size: 18px;
-    
-    }
-       a{
-         text-decoration: none;
-         color: #fff;
-         text-align: center;
-         font-family: Muli,Helvetica Neue,sans-serif;
-         padding: 7px;
-         display: inline-block;
-       }
+#home {
+  background: url(../images/banner.jpg) no-repeat center top;
+  background-size: cover;
+  height: auto;
+  padding-bottom: 20px;
+  padding-top: 20px;
+  position: relative;
+}
 
-    .nav{
-         margin: auto;
-        text-align: center;
-        padding-top: 3em;
-      
-        }
-    
-    
-      .nav img {
-           
-        text-align: center;
-        border: 3px solid #44c7f4;
-      }
-    
-    
-    .my-image{
-     
-        box-sizing: border-box;
-           margin-top: 20px;
-    
-    }
-    
-    h2{
-          text-align:center;
-          text-transform: uppercase;
-          margin-top: 20px;
-          margin-bottom: 10px;
-          line-height: 1.1;
-         
-      }
-    
-      .nav h2 {
-        font-size: 1.7em;
-        color: #fff;
-        letter-spacing: 6px;
-      }
-      .nav span {
-        color: #44c7f4;
-        letter-spacing:4px;
-        font-size:0.9em;
-        font-family: Muli,Helvetica Neue,sans-serif;
-        padding-top: 50px;
-    }
-    
-    
-       h3{display: block;
-        font-weight: bold;
-        font-family: Muli,Helvetica Neue,sans-serif;
-      }
-      #home .homebutton li a:hover,
-      #home .homebutton li a.current {
-        background: #44c7f4;
-        color:#000;
-        border-radius: 10px;
-        opacity: 0.8;
-      }
-     
-      /*Features*/
- .box{ 
-  float: left;
-  width:30%;
-  padding: 20px;
+#home .homebutton ul li {
+  margin: auto;
+  color: #fff;
+  font-family: Muli, Helvetica Neue, sans-serif;
+  list-style: none;
+  margin: auto;
+  display: flex;
+  justify-content:space-between;
+
+}
+
+a {
+  text-decoration: none;
+  color: #fff;
   text-align: center;
-  font-family: Muli,Helvetica Neue,sans-serif;
+  font-family: Muli, Helvetica Neue, sans-serif;
+  padding: 7px;
+  display: inline-block;
 }
-.box i{
+
+ .openMenu{
+  display: none;
+
+}
+ .closeMenu{
+  display: none;
+}
+ .mainMenu{
+  display: flex;
+  list-style: none;
+}
+ .mainMenu li a{
+  display: inline-block;
+  margin-left: auto;
+  padding: 15px;
+  text-decoration: none;
+  text-transform: uppercase;
+  color: #42A5FF;
+  font-size: 22px;
+  font-weight: 400;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;  
+}
+
+.nav {
+  margin: auto;
+  text-align: center;
+  padding-top: 3em;
+
+}
+
+
+.nav img {
+
+  text-align: center;
+  border: 3px solid #44c7f4;
+}
+
+
+.my-image {
+
+  box-sizing: border-box;
+  margin-top: 20px;
+
+}
+
+h2 {
+  text-align: center;
+  text-transform: uppercase;
+  margin-top: 20px;
   margin-bottom: 10px;
+  line-height: 1.1;
+
 }
-bg-light{
-	background: #f4f4f4;
-	color: #333;
+
+.nav h2 {
+  font-size: 1.7em;
+  color: #fff;
+  letter-spacing: 6px;
 }
-.bg-primary{
-	color: #333;
-	background: #f7c08a;
+
+.nav span {
+  color: #44c7f4;
+  letter-spacing: 4px;
+  font-size: 0.9em;
+  font-family: Muli, Helvetica Neue, sans-serif;
+  padding-top: 50px;
+}
+
+
+h3 {
+  display: block;
+  font-weight: bold;
+  font-family: Muli, Helvetica Neue, sans-serif;
+}
+p{
+  font-size: 16px;
+  font-weight: 200;
+ 
+}
+
+#home .homebutton li a:hover,
+#home .homebutton li a.current {
+  background: #44c7f4;
+  color: #000;
+  border-radius: 10px;
+  opacity: 0.8;
+}
+
+/*Features*/
+.box {
+  display: block;
+  padding: 20px;
+  margin: auto;
+  text-align: center;
+  font-family: Muli, Helvetica Neue, sans-serif;
+}
+
+.box i {
+  margin-bottom: 10px;
+  display: block;
+}
+
+bg-light {
+  background: #f4f4f4;
+  color: #333;
+}
+
+.bg-primary {
+  color: #333;
+  background: #f7c08a;
+}
+
+#skills {
+  display: flex;
+
+  justify-content:space-around;
+  padding:  30px 30px 0px 30px;
+}
+.row{
+  display: flex;
+  justify-content: flex-start;
+}
+#features{
+  margin-bottom: 20px;
 }
 /*Footer*/
-#main-footer{
-	width: 100%;
-	float: left;
-	text-align: center;
-  font-family: Muli,Helvetica Neue,sans-serif;
-	background: #444;
-	color: #fff;
-	padding: 10px;
+#main-footer {
+  width: 100%;
+  float: left;
+  text-align: center;
+  font-family: Muli, Helvetica Neue, sans-serif;
+  background: #444;
+  color: #fff;
+  padding: 10px;
 }
 
-#main-footer span{
+#main-footer span {
   padding-left: 5px;
-  font-family: Muli,Helvetica Neue,sans-serif;
+  font-family: Muli, Helvetica Neue, sans-serif;
 }
-  .fa-github{
-    color: #4078c0;
-
-  }
-
-.fa-facebook-square{
- color: #3b5998;
+.fa-solid, .fas {
+ margin-top: 30px;
+ display: flex;
+ justify-content:end;
+  color: #fff;
+}
+.fas {
+  margin-top: 30px;
+  display: flex;
+  justify-content:end;
+   color: #44c7f4;
+ }
+.fa-github {
+  color: #4078c0;
 
 }
-.fa-instagram{
- color: #bc2a8d;
+
+.fa-facebook-square {
+  color: #3b5998;
+
 }
-h4{
+
+.fa-instagram {
+  color: #bc2a8d;
+}
+
+h4 {
   font-size: 1.7em;
-        color: #fff;
-        text-align: center;
-        text-transform: uppercase;
+  color: #fff;
+  text-align: center;
+  text-transform: uppercase;
 }
-#project{
+
+#project {
   height: auto;
   width: 100%;
-  color:#fff;
- background-color: #44c7f4;
- float: left;
- margin: auto;
+  color: #fff;
+  background-color: #44c7f4;
+float: left;
+  margin: auto;
 }
-#project .git-file{
-text-align: center;
- margin: auto;
+
+#project .git-file {
+  text-align: center;
+  margin: auto;
+}
+
+@media(max-width: 640px){
+ .row{
+   display: flex;
+   flex-direction: column;
+   flex-wrap: wrap;
+
+ }
+ .mainMenu{
+  height: 100vh;
+  position: fixed;
+  top: 0;
+  right: 0;
+  left: 0;
+  z-index: 10;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-color: #fff;
+  transition: top 1s ease;
+  display: none;
+}
+.openMenu i{
+  padding: 0px 40px 10px 40px;
+  display: block;
+  flex-wrap: wrap;
+}
+.mainMenu .closeMenu{
+  display: block;
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+.openMenu{
+  display: block;
+  flex-wrap: wrap;
+}
+
+
 }
